Adds ansible header
Added big ansible header

--- a/templates/nginx.j2
+++ b/templates/nginx.j2
@@ -1,3 +1,13 @@
+################################################
+#                                              #
+#     FILE UNDER ANSIBLE CONFIG MANAGEMENT     #
+#                                              #
+#              keep hands away                 #
+#                                              #
+#     ansible-nginx/templates/nginx.j2         #
+#                                              #
+################################################
+
 user www-data;
 worker_processes {{ ansible_processor_cores }};
 
