Adds map_hash_bucket_size handling
Adde map_hash_bucket_size variable (with high default!)

--- a/templates/nginx.j2
+++ b/templates/nginx.j2
@@ -82,6 +82,8 @@ http {
               text/xml
               text/javascript;
 
+  map_hash_bucket_size {{ nginx_map_hash_bucket_size }};
+
   ##
   # If HTTPS, then set a variable so it can be passed along.
   ##
